mostly 508 contrast fixes. Mostly changing greys to #555, which isn't ideal but should fix the errors.

--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -50,7 +50,7 @@ h3 { font-size: 18px; }
 
 footer { margin-top:60px;
   font-size: .75em;
-  color: #888;
+  color: #555555;
 }
 
 footer .container-fluid {
@@ -120,6 +120,17 @@ div.question-answer[data-reviewed] a { text-decoration: underline; }
 
 /* New CSS based on removing inline CSS */
 .btn-sm { width:95%; max-width:200px;  } /* this makes the action buttons all the same width.
+
+/* 508 related */
+.text-muted {color: #555555;}
+.project-settings-desc-item { font-weight:bold;}
+
+.project-status-not-started { color:#444444; font-size:.8em;}
+.project-status-finished {color:#444444; font-size:.8em;}
+.project-status-inprogress {color:#444444; font-size:.8em;}
+
+.glyphicon-pencil:before { color:#555555;}
+
 
 /* misc templates */
 .task-progress-project-truncate { margin: 12px auto 12px auto; text-align: center; }
@@ -199,7 +210,7 @@ a.glyphicon-home-icon { color: black; margin-right: .25em; text-decoration:none;
 .breadcrumb-link { color: black; }
 .app-header { max-width:968px; margin: auto; padding-top: 30px;}
 .btn-start-project { width:100%;}
-.back-to-link { color: #888; }
+.back-to-link { color: #555555; }
 .app-max-width-row { max-width:968px; margin: auto; }
 .app-information-row { border-top: 1px solid #eee; padding-top: 0px; }
 .app-form-margin { margin: 1em; }
@@ -241,7 +252,7 @@ a.glyphicon-home-icon { color: black; margin-right: .25em; text-decoration:none;
 .smidge-left { margin-left: .25em }
 
 .project-settings-glyphicons { margin: 0 1em; }
-.project-settings-header { border-bottom:1px solid #ccc; }
+.project-settings-header { border-bottom:1px solid #ccc; margin-bottom:1.5em; margin-top:1.5em;}
 .project-settings-row { margin: 8px 0 20px 0;}
 .project-settings-description { margin-bottom:8px; }
 .project-settings-rows { margin-top:12px;  }
@@ -297,7 +308,7 @@ form #id_json_content { width: 100%; overflow: auto !important; } /* The !import
 
 /*.component-tag { font-size: 0.7em; color: #999; padding: 0px 6px 0px 6px; border: 1px solid #bbb; border-radius: 24px; margin-right: 2px; }*/
 .component-tag { font-size: 0.7em; color: #999; padding: 0px 6px 0px 6px; border: 1px solid #bbb; border-radius: 24px; }
-.component-tag a { color: #999; }
+.component-tag a { color:#555555; }
 .component-state { font-size: 0.8em; color: #444; padding: 0px 6px 0px 6px; border: 1px solid #bbb; border-radius: 24px; }
 .component-type { font-size: 0.8em; color: #444; padding: 0px 6px 0px 6px; border: 1px solid #bbb; border-radius: 24px; }
 
@@ -333,7 +344,7 @@ form #id_appsource_compapp { width: 100%; overflow: auto !important; }
 /* portfolios */
 .portfolio-top { margin-top: 30px; }
 .portfolio-main { float: right; margin: 0 0.5em 0em 5em; }
-.portfolio-small { color: #888; }
+.portfolio-small { color: #555555; font-size:.8em;}
 .portfolio-row { border-top: 1px solid #aaa;padding: 8px 0px 8px 0px; }
 .portfolio-project-link { color: black; }
 .portfolio-project-top { margin-top: 60px; }
@@ -369,7 +380,7 @@ form #id_appsource_compapp { width: 100%; overflow: auto !important; }
 .systems-element-name { font-size: 14pt; font-weight: bold;}
 .systems-poam { margin-top: 4px; }
 .systems-poam-glyphicon { margin-top: 6px; }
-.systems-control-catalog { font-size: 0.65em; color:#aaa; border:1px solid #aaa; border-radius: 12px; padding:0px 8px 0px 8px; }
+.systems-control-catalog { font-size: 0.65em; color:#555555; border:1px solid #aaa; border-radius: 12px; padding:0px 8px 0px 8px; }
 
 .pagination {
   white-space: nowrap;
